--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
           <nav>
               <a href="order.html">Order</a>
               <a href="invoice.html">Invoice</a>
+              <a href="manager.html">Manager</a>
               <a href="charts.html">Charts</a>
           </nav>
       </div>
