--- a/public/charts.html
+++ b/public/charts.html
@@ -15,11 +15,14 @@
           <nav>
               <a href="order.html">Order</a>
               <a href="invoice.html">Invoice</a>
+              <a href="manager.html">Manager</a>
               <a href="charts.html">Charts</a>
           </nav>
       </div>
 </header>
 
+
+<hr>
 <footer class=" center footer">
     <div class="container">
         <p> copyright © Dime 2018</p>
