--- a/public/invoice.html
+++ b/public/invoice.html
@@ -21,12 +21,20 @@
       </div>
 </header>
 
+<!--search for invoice number-->
+<!--Cancel-->
+
+<!--editable-->
 <!-- Name-->
 <!--Buyer Address-->
-<!-- Line Items -->
+<!-- Email -->
 
+<!--static-->
 <!--Product ID-->
 <!-- Quantity -->
+
+<!--button for edit-->
+<!--button for cancel-->
 
 <hr>
 <footer class=" center footer">
