--- a/public/manager.html
+++ b/public/manager.html
@@ -32,7 +32,7 @@
             <br>
             <input class="form-control" type="text" placeholder="Stock Quantity">
             <br>
-	                <button type="submit">Save Product!</button>
+	                <button id="button" type="submit">Save Product!</button>
                 </form>
        </div>
  
@@ -44,7 +44,9 @@
         <input class="form-control" type="text" placeholder="Unit Price">
         <br>
         <input class="form-control" type="text" placeholder="Stock Quantity">
-        <br>
+        <br>	                
+            <button id="button" type="submit">Edit Product</button>
+
             </form>
         </div>
     </div>
