--- a/public/order.html
+++ b/public/order.html
@@ -26,114 +26,129 @@
         <div id="card" class="card-body">
           <h2 class="card-title">Sales Order</h2>
           <p class="card-text">What would you like to purchase?</p>
-          <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                  <span class="input-group-text" id="inputGroup-sizing-default">Name</span>
-                </div>
-                <input type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
+          <form>
+            <div class="form-row">
+              <div class="form-group col-md-12">
+                <label for="inputEmail4"></label>
+                <input type="email" class="form-control" id="inputEmail4" placeholder="Name">
               </div>
-          <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                      <span class="input-group-text" id="inputGroup-sizing-default">Address</span>
+            </div>
+            <div class="form-group">
+              <label for="inputAddress"></label>
+              <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+            </div>
+          <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="inputCity"></label>
+                    <input type="text" class="form-control" id="inputCity" placeholder="City">
                 </div>
-                    <input type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
-                </div>
-          <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <span class="input-group-text" id="inputGroup-sizing-default">City</span>
-                </div>
-                    <input type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
-         </div>
-         <select class="form-control" id="inputGroupSelect01">
-                <option value="AL">AL</option>
-                <option value="AK">AK</option>
-                <option value="AR">AR</option>	
-                <option value="AZ">AZ</option>
-                <option value="CA">CA</option>
-                <option value="CO">CO</option>
-                <option value="CT">CT</option>
-                <option value="DC">DC</option>
-                <option value="DE">DE</option>
-                <option value="FL">FL</option>
-                <option value="GA">GA</option>
-                <option value="HI">HI</option>
-                <option value="IA">IA</option>	
-                <option value="ID">ID</option>
-                <option value="IL">IL</option>
-                <option value="IN">IN</option>
-                <option value="KS">KS</option>
-                <option value="KY">KY</option>
-                <option value="LA">LA</option>
-                <option value="MA">MA</option>
-                <option value="MD">MD</option>
-                <option value="ME">ME</option>
-                <option value="MI">MI</option>
-                <option value="MN">MN</option>
-                <option value="MO">MO</option>	
-                <option value="MS">MS</option>
-                <option value="MT">MT</option>
-                <option value="NC">NC</option>	
-                <option value="NE">NE</option>
-                <option value="NH">NH</option>
-                <option value="NJ">NJ</option>
-                <option value="NM">NM</option>			
-                <option value="NV">NV</option>
-                <option value="NY">NY</option>
-                <option value="ND">ND</option>
-                <option value="OH">OH</option>
-                <option value="OK">OK</option>
-                <option value="OR">OR</option>
-                <option value="PA">PA</option>
-                <option value="RI">RI</option>
-                <option value="SC">SC</option>
-                <option value="SD">SD</option>
-                <option value="TN">TN</option>
-                <option value="TX">TX</option>
-                <option value="UT">UT</option>
-                <option value="VT">VT</option>
-                <option value="VA">VA</option>
-                <option value="WA">WA</option>
-                <option value="WI">WI</option>	
-                <option value="WV">WV</option>
-                <option value="WY">WY</option>
-            </select>
-              <br>
-          <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                      <span class="input-group-text" id="inputGroup-sizing-default">Zip</span>
-                </div>
-                <input type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
-         </div>
+                  <div class="form-group col-md-4">
+                    <label for="inputState"></label>
+                    <select class="form-control" id="inputGroupSelect01">
+                      <option value="AL">AL</option>
+                      <option value="AK">AK</option>
+                      <option value="AR">AR</option>	
+                      <option value="AZ">AZ</option>
+                      <option value="CA">CA</option>
+                      <option value="CO">CO</option>
+                      <option value="CT">CT</option>
+                      <option value="DC">DC</option>
+                      <option value="DE">DE</option>
+                      <option value="FL">FL</option>
+                      <option value="GA">GA</option>
+                      <option value="HI">HI</option>
+                      <option value="IA">IA</option>	
+                      <option value="ID">ID</option>
+                      <option value="IL">IL</option>
+                      <option value="IN">IN</option>
+                      <option value="KS">KS</option>
+                      <option value="KY">KY</option>
+                      <option value="LA">LA</option>
+                      <option value="MA">MA</option>
+                      <option value="MD">MD</option>
+                      <option value="ME">ME</option>
+                      <option value="MI">MI</option>
+                      <option value="MN">MN</option>
+                      <option value="MO">MO</option>	
+                      <option value="MS">MS</option>
+                      <option value="MT">MT</option>
+                      <option value="NC">NC</option>	
+                      <option value="NE">NE</option>
+                      <option value="NH">NH</option>
+                      <option value="NJ">NJ</option>
+                      <option value="NM">NM</option>			
+                      <option value="NV">NV</option>
+                      <option value="NY">NY</option>
+                      <option value="ND">ND</option>
+                      <option value="OH">OH</option>
+                      <option value="OK">OK</option>
+                      <option value="OR">OR</option>
+                      <option value="PA">PA</option>
+                      <option value="RI">RI</option>
+                      <option value="SC">SC</option>
+                      <option value="SD">SD</option>
+                      <option value="TN">TN</option>
+                      <option value="TX">TX</option>
+                      <option value="UT">UT</option>
+                      <option value="VT">VT</option>
+                      <option value="VA">VA</option>
+                      <option value="WA">WA</option>
+                      <option value="WI">WI</option>	
+                      <option value="WV">WV</option>
+                      <option value="WY">WY</option>
+                  </select>
+                    </select>
+                  </div>
+          <div class="form-group col-md-2">
+                    <label for="inputZip"></label>
+                    <input type="text" class="form-control" id="inputZip" placeholder="Zip">
+                  </div>
          <div class="input-group mb-3">
                 <input type="text" class="form-control" placeholder="Email" aria-label="Recipient's username" aria-describedby="basic-addon2">
                 <div class="input-group-append">
                   <span class="input-group-text" id="basic-addon2">@example.com</span>
                 </div>
               </div>
-    
-              <select class="form-control" id="inputGroupSelect01">
-                  <div class="dropdown-menu">
+          <div class="input-group mb-3">
+                <div class="input-group-prepend">
                     <label class="input-group-text" for="inputGroupSelect01">Item</label>
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                    <div role="separator" class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Separated link</a>
-                  </div>
-            </select>
+                </div>
+                  <select class="custom-select" id="inputGroupSelect01">
+                    <option selected>Choose...</option>
+                    <option value="1">Columbian</option> <!--7.00/pound-->
+                    <option value="2">Sumatra</option> <!--9.00/pound-->
+                    <option value="3">Costa Rica</option> <!--8.00/pound-->
+                    <option value="4">Guatamala</option> <!--8.00/pound-->
+                    <option value="5">Papa New Guinea</option> <!--10.00/pound-->
+                    <option value="5">Kona Blend</option> <!--10.00/pound-->
+                    <option value="6">Jamacian</option> <!--8.00/pound-->
+                    <option value="7">South African</option> <!--7.00/pound-->
+                    <option value="8">Brazilian</option> <!--9.00/pound-->
+                    <option value="9">French Roast</option> <!--6.00/pound-->
+                    <option value="10">Toasted Pecan</option> <!--6.00/pound-->
+                  </select>
+          </div>
               <br>
-          
               <div class="input-group mb-3">
                     <div class="input-group-prepend">
                       <label class="input-group-text" for="inputGroupSelect01">Quantity</label>
                     </div>
                     <select class="custom-select" id="inputGroupSelect01">
                       <option selected>Choose...</option>
-                      <option value="1">One</option>
-                      <option value="2">Two</option>
-                      <option value="3">Three</option>
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5">5</option>
+                      <option value="6">6</option>
+                      <option value="7">7</option>
+                      <option value="8">8</option>
+                      <option value="9">9</option>
+                      <option value="10">10</option>
                     </select>
-                  </div>
+              </div>
+
+              <!--add per pound-->
          <div class="input-group mb-3">
                 <div class="input-group-prepend">
                   <span class="input-group-text">$</span>
@@ -141,7 +156,7 @@
                 </div>
                 <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
               </div>
-          <a href="#" class="btn btn-primary">Submit</a>
+          <a href="#" id="button"class="btn btn-primary">Submit</a>
         </div>
     </div>
 </div>
