client.js invoice

--- a/public/invoice.html
+++ b/public/invoice.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="main.js"></script>
+    <script src="assets/js/client.js"></script>
 </head>
 <body>
   <header id="masthead">
@@ -20,6 +20,37 @@
           </nav>
       </div>
 </header>
+
+<div class="container">
+        <div class="row">
+            <div id="create" class="create col md">
+                <h2>Invoice</h2>
+                    
+                <input class="form-control" type="text" placeholder="Name">
+                <br>
+                <input class="form-control" type="text" placeholder="Buyer Address">
+                <br>
+                <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="Email" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                        <div class="input-group-append">
+                          <span class="input-group-text" id="basic-addon2">@example.com</span>
+                        </div>
+                      </div>
+                <br>
+                <input class="form-control" type="text" placeholder="Product ID">
+                <br>
+                <input class="form-control" type="text" placeholder="Quantity">
+                <br>
+                        <button id="button" type="submit">Edit</button>
+                        <button id="button" type="submit">Cancel</button>
+                    </form>
+           </div>
+       </div>
+
+
+
+</div>
+        
 
 <!--search for invoice number-->
 <!--Cancel-->
