--- a/public/signin.html
+++ b/public/signin.html
@@ -28,7 +28,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <!-- <div class="row">
         <div class="col-lg-12">
             {{#if success_msg}}
             <div class="alert alert-success">{{success_msg}}</div>
@@ -44,6 +44,6 @@
           
             {{{body}}}
         </div>
-    </div>
+    </div> -->
 </body>
 </html>
