--- a/public/manager.html
+++ b/public/manager.html
@@ -23,10 +23,10 @@
 
 <div class="container">
     <div class="row">
-        <div id="create" class="create col md">
+        <div id="create" id="updateproduct"class="create col md">
             <h2>Create Product</h2>
                 
-            <input class="form-control" type="text" placeholder="Product Name">
+            <input class="form-control" type="text" name="product" placeholder="Product Name">
             <br>
             <input class="form-control" type="text" placeholder="Unit Price">
             <br>
@@ -39,11 +39,11 @@
 
     <div id="current" class="current col md">
         <h2>Current Products</h2>
-        <input class="form-control" type="text" placeholder="Product Name">
+        <input class="form-control" type="text" id="item" name="product" placeholder="Product Name">
         <br>
-        <input class="form-control" type="text" placeholder="Unit Price">
+        <input class="form-control" type="text" id="item" name="product" placeholder="Unit Price">
         <br>
-        <input class="form-control" type="text" placeholder="Stock Quantity">
+        <input class="form-control" type="text" id="item" name="product" placeholder="Stock Quantity">
         <br>	                
             <button id="button" type="submit">Edit Product</button>
 
