--- a/public/order.html
+++ b/public/order.html
@@ -30,11 +30,11 @@
                 <input type="name" class="form-control" id="inputName" placeholder="Name">
 
               <label for="inputAddress"></label>
-              <input type="text" class="form-control" id="input" name="order" placeholder="1234 Main St">
+              <input type="text" class="form-control" id="inputAddress" name="order" placeholder="1234 Main St">
           <div class="form-row">
                 <div class="form-group col-md-6">
                     <label for="inputCity"></label>
-                    <input type="text" class="form-control" id="input" name="order" placeholder="City">
+                    <input type="text" class="form-control" id="inputCity" name="order" placeholder="City">
                 </div>
                   <div class="form-group col-md-4">
                     <label for="inputState"></label>
@@ -95,7 +95,7 @@
                   </div>
           <div class="form-group col-md-2">
                     <label for="inputZip"></label>
-                    <input type="text" class="form-control" id="input" name="order" placeholder="Zip">
+                    <input type="text" class="form-control" id="inputZip" name="order" placeholder="Zip">
                   </div>
          <div class="input-group mb-3">
 
@@ -108,8 +108,8 @@
               <div id="coffeeForm" class="input-group mb-10">
 
               </div>
-              <button id="addLineItem" class="btn btn-primary">Add Another Item</button>
-          <a href="#" id="button"class="btn btn-primary">Submit</a>
+              <button id="addLineItem" class="btn btn-primary" type="button">Add Another Item</button>
+          <button id="button"class="btn btn-primary" type="button">Submit</button>
 
         </div>
     </div>
